cmake_minimum_required(VERSION 3.27)
project(24_4_3)

set(CMAKE_CXX_STANDARD 11)

add_executable(24_4_3
#        main.cpp
#        pascals-triangle.cpp
#        remove-duplicates-from-sorted-array.cpp
#        single-number-ii.cpp
        letter-combinations-of-a-phone-number.cpp
        build.h
        main.cpp
)
